--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
         <nav>
             <ul class="sidebar">
                 <li onclick="hide()" class="bar"><a href="#" class="navbarclose"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-                <li class="bar"><a href="../index.html" class="navbar">Home</a></li>
+                <li class="bar"><a href="index.html" class="navbar">Home</a></li>
                 <li class="bar"><a href="#" class="navbar">About</a></li>
                 <li class="bar"><a href="#" class="navbar">Contact</a></li>
                 
