--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iphone specs</title>
     <link rel="stylesheet" href="style.css" />
+     <script src="script.js"></script>
   </head>
   <body class="bodyclose">
     <h1 class="head">Iphones from x - 15</h1>
@@ -23,7 +24,7 @@
           </ul>
       </nav>
       </div>
-      <script src="../script.js"></script>
+     
 
     <div class="container">
       <div class="flex-container">
